Fix handle alignment problem in Safari.
Actually, the safari problem alerted me to an ever deeper problem that
was happening everywhere but was only showing up in Safari.  Since the
audio player itself manipulates the handle via the "left" CSS
attribute, it makes sense to align the gutter so that the beginning
position of the handle is at 0, not some negative offset that doesn't
need to actually be there.

Ensure handle always starts in the same place.

--- a/css/style.css
+++ b/css/style.css
@@ -208,8 +208,8 @@ header a {
 	position: relative;
         display: block;
 	top: -1px;
-        width: 376px;
-	left: 111px;
+        width: 389px;
+	left: 100px;
 	right: 50px;
 	height: 6px;
 	padding: 2px;
@@ -242,9 +242,9 @@ header a {
 #handle {
 	position: absolute;
 	top: -18px;
-	left: -11px;
 	width: 50px;
 	height: 50px;
+        left: 0%;
 	margin-left: -10px;
 	background: url(/img/player-dingbats-40.png) no-repeat -133px -5px;
 	cursor: pointer;
